--- a/public/templates/admin/login.html
+++ b/public/templates/admin/login.html
@@ -3,7 +3,7 @@
     <div id="error" ng-show="hasError">{{errorMessage}}</div>
     <p>
       <label for="email">Email:</label>
-      <input type="text" name="email" id="email" autofocus ng-model="user.email" ng-focus="true" />
+      <input type="text" name="email" id="email" autofocus ng-model="user.email" />
     </p>
     <p>
       <label for="password">Password:</label>
